--- a/simple-html/mirror-fashion/css/about.css
+++ b/simple-html/mirror-fashion/css/about.css
@@ -1,22 +1,50 @@
+:root{
+    --color-base: #333333;
+}
+
 body {
     color: #333333;
-    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    margin-left: auto;
+    margin-right: auto;
+    width: 940px;
 }
 
 h1 {
     background-image: url(../img/sobre-background.jpg);
+    padding: 10px;
 }
 
 h2 {
     border-bottom: 2px groove #333333;
+    margin-top: 30px;
 }
 
 figure {
     background-color: #F2EDED;
     border: 1px solid #ccc;
     text-align: center;
+    padding: 15px;
+    margin: 30px;
 }
 
 figcaption {
     font-style: italic;
+    margin-top: 10px;
 }
+
+p {
+    padding: 0 45px;
+    text-indent: 15px;
+}
+
+ol {
+    ol {
+        list-style-type: decimal;
+      }
+      
+}
+
+
+
