--- a/simple-html/mirror-fashion/css/about.css
+++ b/simple-html/mirror-fashion/css/about.css
@@ -46,3 +46,27 @@ p {
 ol {
     list-style-type: decimal;
 }
+
+#centro-distribuicao {
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
+}
+
+#rodape {
+    color: #777;
+    margin: 30px 0;
+    padding: 30px 0;
+}
+
+#rodape img {
+    margin-right: 30px;
+    vertical-align: middle;
+    width: 94px;
+}
+
+#familia-pelho {
+    float: right;
+    margin: 0 0 10px 10px;
+}
+
