--- a/simple-html/mirror-fashion/css/about.css
+++ b/simple-html/mirror-fashion/css/about.css
@@ -53,13 +53,13 @@ ol {
     width: 550px;
 }
 
-#rodape {
+footer {
     color: #777;
     margin: 30px 0;
     padding: 30px 0;
 }
 
-#rodape img {
+footer img {
     margin-right: 30px;
     vertical-align: middle;
     width: 94px;
