--- a/simple-html/mirror-fashion/css/about.css
+++ b/simple-html/mirror-fashion/css/about.css
@@ -8,9 +8,10 @@ body {
     color: var(--color-base);
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    margin-left: auto;
-    margin-right: auto;
-    width: 940px;
+    margin: 0 auto;
+    padding: 0 20px;
+    max-width: 940px;
+    box-sizing: border-box;
 }
 
 h1 {
@@ -30,7 +31,8 @@ figure {
     border: 1px solid var(--color-border-figure);
     text-align: center;
     padding: 15px;
-    margin: 30px;
+    margin: 30px auto;
+    max-width: 100%;
 }
 
 figcaption {
@@ -45,28 +47,86 @@ p {
 
 ol {
     list-style-type: decimal;
+    padding-left: 60px;
 }
 
 #centro-distribuicao {
-    margin-left: auto;
-    margin-right: auto;
-    width: 550px;
+    margin: 30px auto;
+    width: 100%;
+    max-width: 550px;
 }
 
 footer {
     color: #777;
     margin: 30px 0;
     padding: 30px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
 }
 
 footer img {
-    margin-right: 30px;
-    vertical-align: middle;
+    margin-right: 20px;
     width: 94px;
 }
 
 #familia-pelho {
     float: right;
     margin: 0 0 10px 10px;
+    max-width: 100%;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    body {
+        padding: 0 15px;
+    }
+
+    h1 {
+        font-size: 1.8em;
+        padding: 8px;
+    }
+
+    h2 {
+        font-size: 1.4em;
+        margin-top: 20px;
+    }
+
+    p {
+        padding: 0;
+        text-indent: 15px;
+        line-height: 1.5;
+    }
+
+    figure {
+        margin: 20px 0;
+        padding: 10px;
+    }
+
+    #centro-distribuicao {
+        width: 100%;
+    }
+
+    #familia-pelho {
+        float: none;
+        margin: 20px auto;
+        display: block;
+    }
+
+    footer {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    ol {
+        padding-left: 30px;
+    }
+}
