--- a/simple-html/mirror-fashion/css/about.css
+++ b/simple-html/mirror-fashion/css/about.css
@@ -130,3 +130,12 @@ img {
         padding-left: 30px;
     }
 }
+
+/* Responsabilidade Smartphones*/
+@media (max-width: 480px) {
+ 
+    /* Ocultado o rodapé */
+    footer img {
+        display: none;
+    }
+}
